yle-dl - download videos from Yle servers
Copyright 2009-2019 Antti Ajanki
Distributed under the GPL v3

Version 20191231

- Don't download a copy if a file already exists
- New option --no-overwite avoids downloading if a file (even partial)
  already exists
- The default was changed to resume a partially downloaded file (on
  supported streams). Use --no-resume download the whole stream again
- Handle various corner cases better in the title extraction
- Include an unique ID in the output file name with --output-template '${program_id}'
- More options for controlling the output verbosity: -qq, -q, -V, -VV
- File name and metadata in Swedish (if available): --metadatalang swe
- Use the Swedish title by default on a Svenska Arenan or Arkivet URL

Version 20191022

- Make --destdir and -o work together
- Avoid re-downloading a file when --resume is enabled
- Embed the program description in the output file (only Matroska files)
- Include the tests in the source tarball

Version 20190614 - Ten year anniversary edition

- Improved compability with older ffmpeg versions
- Save subtitles in a format supported by mplayer

Version 20190502

- Download audio streams with the original 192 kb/s bitrate
- Fixed a bug that caused yle-dl to randomly download a stream without subtitles
- Enabled higher resolutions on some (mainly sports) streams
- Programs are now downloadable right after a live broadcast
- Fixed support for https://yle.fi/uutiset

Version 20190331

- Most video streams are now saved in Matroska format by default.
  To revert to the earlier behavior, use --preferformat mp4
- Subtitle languages are correctly labeled (only in the Matroska format)
- Some streams were not downloaded at all
- Tabs and other odd whitespaces are replaces by space in generated filenames
- Fixed the series download which was broken by changes in Areena

Version 20190203

- Switch to using ffmpeg instead of wget by default
- Embed subtitles to the downloaded video file when possible